Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-2888

QMF: C++ agent does not re-publish all management data on reconnect to the broker.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.7
    • QMF
    • None

    Description

      Should the connection between the broker and a V2 QMF agent fail, then recover, the agent does not republish all management data objects on reconnect. This may cause some consoles to get out of sync with the agent, as the consoles may have deleted and cleaned up all context related to that agent. To reproduce:

      1. Start a broker and a qmf console on one machine.
      2. Start a v2 agent on a different machine.
      3. Wait for the console to receive mgmt data from the agent.
      4. Break the network connection between agent and broker.
      5. Wait for the console to delete the agent (timeout).
      6. Re-connect the agent and broker.
      7. Wait for the console to see the agent (new agent event).

      The console will only be notified of any objects that have been updated during the disconnect. This leaves the console with an incomplete set of management data from that agent.

      Attachments

        Activity

          People

            kgiusti Ken Giusti
            kgiusti Ken Giusti
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: