QPID-2888: qmf v2 agent will republish all data on broker reconnect.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1003052 13f79535-47bb-0310-9956-ffa450edef68